    - JACK audio: react on sample rate changes.
    - JACK audio: react on buffer size changes.
    - JACK audio: jack_port_get_buffer() was cached and called outside
      RT context.
    - ASIO driver: removed compiler warnings
    - CoreAudio: fixed minor error handling bug
    - ASIO driver: be more verbose when no ASIO card could be found (fixes #203)

  * LSCP server:
    - added support for sending MIDI CC messages via LSCP command
      "SEND CHANNEL MIDI_DATA CC <sampler-chan> <ctrl> <val>"
    - added LSCP command "GET AVAILABLE_EFFECTS"
    - added LSCP command "LIST AVAILABLE_EFFECTS"
    - added LSCP command "GET EFFECT INFO <effect-index>"
    - added LSCP command "CREATE EFFECT_INSTANCE <effect-index>"
    - added LSCP command
      "CREATE EFFECT_INSTANCE <effect-system> <module> <effect-name>"
    - added LSCP command "DESTROY EFFECT_INSTANCE <effect-instance>"
    - added LSCP command "GET EFFECT_INSTANCES"
    - added LSCP command "LIST EFFECT_INSTANCES"
    - added LSCP command "GET EFFECT_INSTANCE INFO <effect-instance>"
    - added LSCP command
      "GET EFFECT_INSTANCE_INPUT_CONTROL INFO <effect-instance> <input-control>"
    - added LSCP command "SET EFFECT_INSTANCE_INPUT_CONTROL VALUE
      <effect-instance> <input-control> <value>"
    - added LSCP command "GET SEND_EFFECT_CHAINS <audio-device>"
    - added LSCP command "LIST SEND_EFFECT_CHAINS <audio-device>"
    - added LSCP command "ADD SEND_EFFECT_CHAIN <audio-device>"
    - added LSCP command
      "REMOVE SEND_EFFECT_CHAIN <audio-device> <effect-chain>"
    - added LSCP command
      "GET SEND_EFFECT_CHAIN INFO <audio-device> <effect-chain>"
    - added LSCP command "APPEND SEND_EFFECT_CHAIN EFFECT <audio-device>
      <effect-chain> <effect-instance>"
    - added LSCP command "INSERT SEND_EFFECT_CHAIN EFFECT <audio-device>
      <effect-chain> <effect-chain-pos> <effect-instance>"
    - added LSCP command "REMOVE SEND_EFFECT_CHAIN EFFECT <audio-device>